# release-7.3.0-experiments

./: .gitignore  CMakeLists.txt  README.md
Gray-Scott/: CMakeLists.txt  dirk.hpp  erk.hpp  gray_scott_model.hpp  integrator.hpp  lsrk.sh  main.cpp  options.hpp  postprocess.py  ref.sh  splitting.hpp  splitting.sh
Lotka-Volterra/: convergence_plot.py  error_asa_order_3.csv  error_asa_order_4.csv  error_asa_order_5.csv  lotka_volterra_arkode.c  lotka_volterra_bwd_sens.jl  lotka_volterra_cvodes.c  lotka_volterra_scimlsens.jl  lotka_volterra_sens.jl  lotka_volterra_zygote.jl  run_experiment.sh  step_sizes.txt
